fix spacing, and thats it

--- a/tour-and-travel/css/style.css
+++ b/tour-and-travel/css/style.css
@@ -366,7 +366,7 @@ table {
   justify-content: space-around;
   flex-wrap: nowrap; }
 
-.stories-img-block {
+.stories__img-block {
   max-height: 446px;
   max-width: 266px; }
 
