--- a/tour-and-travel/sass/pages/_home.scss
+++ b/tour-and-travel/sass/pages/_home.scss
@@ -159,7 +159,7 @@
 		justify-content: space-around;
 		flex-wrap: nowrap;
 	}
-	&-img-block {
+	&__img-block {
 		max-height: 446px;
 		max-width: 266px;
 	}
